Add 119.Pascal's Triangle II.md

--- a/solutions/118.Pascal's Triangle.md
+++ b/solutions/118.Pascal's Triangle.md
@@ -2,6 +2,10 @@
 
 [link](https://leetcode.com/problems/pascals-triangle/description/)
 
+Tags: Array
+
+Difficulty: Easy
+
 ## Description
 Given numRows, generate the first numRows of Pascal's triangle.
 
