--- a/solutions/53.Maximum Subarray.md
+++ b/solutions/53.Maximum Subarray.md
@@ -24,12 +24,18 @@ If you have figured out the O(*n*) solution, try coding another solution using t
 (My thought was exact the first idea as follows which does not work...)
 
 ```
-At first, I think the sub problem should look like: maxSubArray(int A[], int i, int j), which means the maxSubArray for A[i: j].
+At first, I think the sub problem should look like: maxSubArray(int A[], int i, int j),
+which means the maxSubArray for A[i: j].
 In this way, our goal is to figure out what maxSubArray(A, 0, A.length - 1) is.
-However, if we define the format of the sub problem in this way, it's hard to find the connection from the sub problem to the original problem.
-So I change the format of the sub problem into something like: maxSubArray(int A[], int i), which means the maxSubArray for A[0:i] which must has A[i] as the end element. Note that now the sub problem's format is less flexible and less powerful than the previous one because there's a limitation that A[i] should be contained in that sequence and we have to keep track of each solution of the sub problem to update the global optimal value.
+However, if we define the format of the sub problem in this way, it's hard to find the 
+connection from the sub problem to the original problem.
+So I change the format of the sub problem into something like: maxSubArray(int A[], int i),
+which means the maxSubArray for A[0:i] which must has A[i] as the end element. 
+Note that now the sub problem's format is less flexible and less powerful than the 
+previous one because there's a limitation that A[i] should be contained in that sequence
+and we have to keep track of each solution of the sub problem to update the global optimal value.
 However, now the connect between the sub problem & the original one becomes clearer:
- maxSubArray(A, i) = maxSubArray(A, i - 1) > 0 ? maxSubArray(A, i - 1) : 0 + A[i]; 
+maxSubArray(A, i) = maxSubArray(A, i - 1) > 0 ? maxSubArray(A, i - 1) : 0 + A[i]; 
 ```
 
 ```c++
