--- a/solutions/35.Search Insert Position.md
+++ b/solutions/35.Search Insert Position.md
@@ -1,4 +1,4 @@
-#35. Search Insert Position
+# 35. Search Insert Position
 
 [link](https://leetcode.com/problems/search-insert-position/description/)
 
@@ -42,10 +42,13 @@ public:
         }
 
         // (1) At this point, low > high. That is, low >= high+1
-        // (2) From the invariant, we know that the index is between [low, high+1], so low <= high+1. Follwing from (1), now we know low == high+1.
-        // (3) Following (2), the index is between [low, high+1] = [low, low], which means that low is the desired index
-        //     Therefore, we return low as the answer. You can also return high+1 as the result, since low == high+1
-            return low;	// luckily this is true for all conditions that the target is not found
+        // (2) From the invariant, we know that the index is between [low, high+1],
+        // so low <= high+1. Follwing from (1), now we know low == high+1.
+        // (3) Following (2), the index is between [low, high+1] = [low, low],
+        // which means that low is the desired index
+        // Therefore, we return low as the answer.
+        // You can also return high+1 as the result, since low == high+1
+        return low;	// luckily this is true for all conditions that the target is not found
     }
 };
 ```
